--- a/src/rank_eval.ipynb
+++ b/src/rank_eval.ipynb
@@ -959,6 +959,15 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "High cardinality features are distributed in the middle of the ranking (avg 55), the highest rank is 20.\n",
